--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,7 +2,7 @@
 <head>
     <title >{% block title %} - Todo List{%endblock%}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <link rel="shortcut icon" href="PROYECTO_TAREAS_ONLINE\todoer\todo\static\checklist_106575.ico"/>
+    <link rel="shortcut icon" href="PROYECTO_TAREAS_ONLINE\todoer\app\static\checklist_106575.ico"/>
 </head>
     <nav>
         <h1 id="title">Todo List</h1>
